# twoaxistracking

./: .gitignore  .readthedocs.yml  .readthedocsyml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg  two_axis_tracker_shading.py
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: environment.yml  requirements.txt
docs/source/: conf.py  documentation.rst  index.md  index.rst  installation.md  whatsnew.md
docs/source/notebooks/: Barstow_data.ipynb  Example time series generation.ipynb  field_layout_discretization.ipynb  intro_tutorial.ipynb  numerical_simulations.ipynb  reference_dataset.ipynb  user_guide.ipynb  validation.ipynb
notebooks/: Barstow_data.ipynb  Example time series generation.ipynb  numerical_simulations.ipynb
src/twoaxistracking/: layout.py  plotting.py  shading.py
test/: test_layout.py
tests/: conftest.py  test_layout.py  test_plotting.py  test_trackerfield.py  test_twoaxistracking.py
two_axis_tracker_shading/: __init__.py  shading.py  two_axis_tracker_shading.py
twoaxistracking/: __init__.py  layout.py  plotting.py  shading.py  trackerfield.py  twoaxistrackerfield.py
twoaxistracking/tests/: conftest.py  test_layout.py  test_placeholder.py  test_plotting.py  test_shading.py  test_trackerfield.py  test_twoaxistrackerfield.py  test_twoaxistracking.py
