[build-system]
requires = [
    "setuptools>61",  # start of support for pyproject.toml/PEP 621. https://setuptools.pypa.io/en/stable/history.html#v61-0-0
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]  # set version dynamically

[tool.setuptools]
include-package-data = false  # necessary for exclude to work

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "twoaxistracking"
authors = [
    {name = "Adam R. Jensen"},
    {name = "Kevin S. Anderson"},
    {email = "adam-r-j@hotmail.com"},
]
description = "twoaxistracking is a python package for simulating two-axis tracking solar collectors, particularly self-shading."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["solar energy", "photovoltaics", "solar collector", "shading"]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "matplotlib",
    "shapely",
    "pandas",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov", "packaging"]
doc = [
    "sphinx==8.1.1",
    "myst-nb==1.1.2",
    "sphinx-book-theme==1.1.3",
    "pvlib==0.11.1",
    "pandas==2.2.3",
]

[project.urls]
Documentation = "https://twoaxistracking.readthedocs.io"
Issues = "https://github.com/pvlib/twoaxistracking/issues"
Repository = "https://github.com/pvlib/twoaxistracking.git"
Changelog = "https://github.com/pvlib/twoaxistracking/blob/main/docs/source/whatsnew.md"

[tool.pytest.ini_options]
addopts = "--cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing"
pythonpath = ["src"]
