[metadata]
name = twoaxistracking
version = 0.2.3
author = 'Adam R. Jensen, Kevin Anderson'
author_email = adam-r-j@hotmail.com
description = twoaxistracking is a python package for simulating two-axis tracking solar collectors, particularly self-shading.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pvlib/twoaxistracking
project_urls =
    Bug Tracker = https://github.com/pvlib/twoaxistracking/issues
    Documentation = https://twoaxistracking.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
packages = twoaxistracking
python_requires = >=3.7
install_requires =
    numpy
    matplotlib
    pandas

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx==4.4.0
    myst-nb==0.16.0
    sphinx-book-theme==0.3.3
    pvlib==0.9.0
    pandas==1.3.5

[tool:pytest]
addopts = --cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing

[coverage:run]
# don't count the test files themselves towards coverage
omit = twoaxistracking/tests/*
