[metadata]
name = twoaxistracking
version = 0.2.5
author = 'Adam R. Jensen, Kevin Anderson'
author_email = adam-r-j@hotmail.com
description = twoaxistracking is a python package for simulating two-axis tracking solar collectors, particularly self-shading.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pvlib/twoaxistracking
project_urls =
    Bug Tracker = https://github.com/pvlib/twoaxistracking/issues
    Documentation = https://twoaxistracking.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
packages = twoaxistracking
python_requires = >=3.9
install_requires =
    numpy
    matplotlib
    shapely
    pandas

[options.extras_require]
test =
    pytest
    pytest-cov
    packaging
doc =
    sphinx==8.1.1
    myst-nb==1.1.2
    sphinx-book-theme==1.1.3
    pvlib==0.11.1
    pandas==2.2.3

[tool:pytest]
addopts = --cov=twoaxistracking --cov-fail-under=100 --cov-report=term-missing

[coverage:run]
# don't count the test files themselves towards coverage
omit = twoaxistracking/tests/*
